--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,13 @@
     "require-dev": 
         {
             "phpunit/phpunit": "3.7.*"
+        },
+    "autoload": 
+        {
+        "psr-4": {"ComposerUI\\":"src/"}
+        },
+   "autoload-dev": 
+        {
+       "psr-4": {"ComposerUI\\Tests\\":"tests/"}
         }
 }
